# goal_watcher

./: .gitignore  .pre-commit-config.yaml  ACTIONS.md  README.md  cdk.json  cspell.config.yaml  pyproject.toml
.github/instructions/: actions-log.instructions.md  aws-serverless.instructions.md  git-workflow.instructions.md  node.instructions.md  python.instructions.md
.github/workflows/: mypy.yml  node-lint.yml  node-test.yml  pytest.yml  ruff.yml  spellcheck.yml
app/: app.py
app/goal_watcher/cdk/: __init__.py  constants.py  dependency_layer.py  goal_watcher_stack.py
app/goal_watcher/fixture_checker/: app.py  fixture_scanner.py  poller_control.py
app/goal_watcher/goal_poller/: app.py  goal_detector.py  smartthings_notifier.py
app/goal_watcher/model/: __init__.py  espn.py  fixture.py  installation.py  match_state.py
app/goal_watcher/shared/: __init__.py  dynamo.py  espn_client.py  scottish_leagues.py
scripts/: create-issues.sh
smartapp/: eslint.config.js  jest.config.js  package-lock.json  package.json
smartapp/src/: dynamodb-context-store.js  index.js  smartapp.js  teams.js
smartapp/src/__tests__/: dynamodb-context-store.test.js  index.test.js  teams.test.js
tests/: conftest.py
tests/unit/cdk/: conftest.py  test_goal_watcher_stack.py
tests/unit/fixture_checker/: test_fixture_scanner.py  test_poller_control.py
tests/unit/goal_poller/: test_goal_detector.py  test_smartthings_notifier.py
tests/unit/shared/: test_espn_client.py
